# Elect-Kenya

./: .gitignore  BLOAT_AUDIT.md  BLOAT_CLEANUP.md  QUICK_START.md  README.md  docker-compose.yml  package-lock.json  package.json  probe.py  probe_report.json  test.py  turbo.json
apps/backend/: .env.example  Dockerfile  MP_SCRAPER.md  Pipfile  full_page.html  mps_complete.json  mps_structured.json  page_sample.html  pyproject.toml  requirements.txt  scrape_mps.py  seeds.py
apps/backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
apps/backend/app/routes/: admin.py  candidates.py  counties.py  issues.py  vote_buying.py
apps/backend/app/utils/: mp_scraper.py  wikipedia.py
apps/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: index.css  main.tsx  router.tsx
apps/frontend/src/components/: Layout.tsx
apps/frontend/src/components/ui/: Skeleton.tsx
apps/frontend/src/pages/: About.tsx  AdminDashboard.tsx  CandidateDetail.tsx  Candidates.tsx  Counties.tsx  CountyDetail.tsx  Home.tsx  Issues.tsx  Resources.tsx  VoteBuying.tsx  WhatCouldHaveBeen.tsx
